Set up data collecting

--- a/housesaledata.ipynb
+++ b/housesaledata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e914c081-0e71-4c76-88e7-de28f07174b5",
    "metadata": {},
    "outputs": [],
@@ -18,18 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "d2624ae5-31c0-422b-b528-8dd78ba3f719",
    "metadata": {},
    "outputs": [],
    "source": [
+    "browser = Browser('chrome')\n",
+    "url = \"https://housesigma.com/listings/watched-area-and-community\"\n",
+    "browser.visit(url)\n",
     "html = browser.html\n",
     "soup_obj = soup(html, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "1e4ac566-185f-49f0-b406-82e2df1b8b67",
    "metadata": {},
    "outputs": [],
@@ -39,15 +42,15 @@
     "email_input = WebDriverWait(browser.driver, 10).until(\n",
     "    EC.element_to_be_clickable((By.CSS_SELECTOR, '.form-input.medium.clear.input input[type=\"email\"]'))\n",
     ")\n",
-    "\n",
-    "\n",
+    "email = 'qwerty.kitten.m@gmail.com'\n",
+    "passw = 'Bootcamp2024*'\n",
     "login = (email) \n",
     "email_input.send_keys(login)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "ed498b02-96ec-420b-a1d5-a639465d3645",
    "metadata": {},
    "outputs": [],
@@ -61,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "c5310777-f6cb-4425-b893-fc920aa42c50",
    "metadata": {},
    "outputs": [],
@@ -69,6 +72,370 @@
     "button = browser.find_by_css('.app-btn.hs_btn_login_submit_email').first\n",
     "button.click()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "072e5594-78dd-425e-a241-d65144dafe48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "College Park\n",
+      "River Oaks\n",
+      "Uptown Core\n",
+      "Uptown Core\n",
+      "Old Oakville\n",
+      "Old Oakville\n",
+      "Eastlake\n",
+      "Old Oakville\n",
+      "Bronte West\n",
+      "West Oak Trails\n"
+     ]
+    }
+   ],
+   "source": [
+    "browser.is_element_present_by_css('.pc-listing-card', wait_time=10)\n",
+    "html = browser.html\n",
+    "soup_obj = soup(html, 'html.parser')\n",
+    "elements = soup_obj.find_all('span', class_='text1')\n",
+    "for element in elements:\n",
+    "    print(element.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "622cea95-654b-4547-884f-8ceee5e86396",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Item 1: {'address': '1277 Redbank Cres , Oakville - College Park', 'text1': 'College Park', 'floorSize': 1299, 'latitude': -79.70085, 'longitude': 43.46068, 'date-preview': '3 hours ago', 'highlight': '$848,000', 'type': 'Condo Townhouse', 'bedroom': 3, 'bathroom': 2}\n",
+      "Item 2: {'address': '2158 Lillykin St , Oakville - River Oaks', 'text1': 'River Oaks', 'floorSize': 4250, 'latitude': -79.7093, 'longitude': 43.47843, 'date-preview': '3 hours ago', 'highlight': '$2,769,900', 'type': 'Detached', 'bedroom': 5, 'bathroom': 6}\n",
+      "Item 3: {'address': '429 - 2485 Taunton Rd , Oakville - Uptown Core', 'text1': 'Uptown Core', 'floorSize': 649, 'latitude': -79.71938, 'longitude': 43.4863, 'date-preview': '6 hours ago', 'highlight': '$635,000', 'type': 'Condo Apt', 'bedroom': 2, 'bathroom': 2}\n",
+      "Item 4: {'address': '2501 - 297 Oak Walk Dr , Oakville - Uptown Core', 'text1': 'Uptown Core', 'floorSize': 549, 'latitude': -79.71817, 'longitude': 43.48617, 'date-preview': '6 hours ago', 'highlight': '$575,000', 'type': 'Condo Apt', 'bedroom': 1, 'bathroom': 1}\n",
+      "Item 5: {'address': '118 Tavistock Sq , Oakville - Old Oakville', 'text1': 'Old Oakville', 'floorSize': 2250, 'latitude': -79.68256, 'longitude': 43.43334, 'date-preview': '6 hours ago', 'highlight': '$2,299,000', 'type': 'Detached', 'bedroom': 3, 'bathroom': 2}\n",
+      "Item 6: {'address': '417 - 185 Robinson St , Oakville - Old Oakville', 'text1': 'Old Oakville', 'floorSize': 1099, 'latitude': -79.66801, 'longitude': 43.44496, 'date-preview': '7 hours ago', 'highlight': '$773,000', 'type': 'Condo Apt', 'bedroom': 2, 'bathroom': 2}\n",
+      "Item 7: {'address': '2193 Constance Dr , Oakville - Eastlake', 'text1': 'Eastlake', 'floorSize': 1750, 'latitude': -79.64955, 'longitude': 43.48113, 'date-preview': '7 hours ago', 'highlight': '$1,850,000', 'type': 'Detached', 'bedroom': 4, 'bathroom': 3}\n",
+      "Item 8: {'address': '417 - 185 Robinson St , Oakville - Old Oakville', 'text1': 'Old Oakville', 'floorSize': 1099, 'latitude': -79.66801, 'longitude': 43.44496, 'date-preview': '16 hours ago', 'highlight': '$799,500', 'type': 'Condo Apt', 'bedroom': 2, 'bathroom': 2}\n",
+      "Item 9: {'address': '3118 Victoria St , Oakville - Bronte West', 'text1': 'Bronte West', 'floorSize': 5000, 'latitude': -79.71738, 'longitude': 43.3886, 'date-preview': '16 hours ago', 'highlight': '$3,299,900', 'type': 'Detached', 'bedroom': 6, 'bathroom': 6}\n",
+      "Item 10: {'address': '1408 Bayberry Pl , Oakville - West Oak Trails', 'text1': 'West Oak Trails', 'floorSize': 2531, 'latitude': -79.74111, 'longitude': 43.44172, 'date-preview': '16 hours ago', 'highlight': '$2,079,000', 'type': 'Detached', 'bedroom': 4, 'bathroom': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import re\n",
+    "\n",
+    "data_list = []  # Initialize a list to store data for all items\n",
+    "\n",
+    "# Find all articles containing property information\n",
+    "articles = soup_obj.find_all('article', class_='pc-listing-card')\n",
+    "\n",
+    "# Loop through each article to collect data\n",
+    "for article in articles:\n",
+    "    data = {}\n",
+    "\n",
+    "    # Address\n",
+    "    address_element = article.find('h3', class_='address')\n",
+    "    data['address'] = address_element.text.strip() if address_element else None\n",
+    "\n",
+    "    # Text1\n",
+    "    text1_element = article.find('span', class_='text1')\n",
+    "    data['text1'] = text1_element.text.strip() if text1_element else None\n",
+    "\n",
+    "    # Find all <script> tags containing JSON data within the article\n",
+    "    json_scripts = article.find_all('script', class_='hs-script-home-struct', type='application/ld+json')\n",
+    "\n",
+    "    # Extract relevant information from each JSON script\n",
+    "    for script in json_scripts:\n",
+    "        json_data = script.string\n",
+    "        if json_data:\n",
+    "            json_dict = json.loads(json_data)\n",
+    "            \n",
+    "            # Extract and store floorSize, latitude, and longitude if available\n",
+    "            if 'floorSize' in json_dict:\n",
+    "                data['floorSize'] = json_dict['floorSize']['value']\n",
+    "            if 'geo' in json_dict:\n",
+    "                data['latitude'] = json_dict['geo']['latitude']\n",
+    "                data['longitude'] = json_dict['geo']['longitude']\n",
+    "\n",
+    "    # Date Preview\n",
+    "    date_preview_element = article.find('div', class_='date-preview')\n",
+    "    data['date-preview'] = date_preview_element.text.strip() if date_preview_element else None\n",
+    "\n",
+    "    # Highlight\n",
+    "    highlight_element = article.find('span', class_='highlight')\n",
+    "    data['highlight'] = highlight_element.text.strip() if highlight_element else None\n",
+    "\n",
+    "    # Type\n",
+    "    type_element = article.find('p', class_='type')\n",
+    "    data['type'] = type_element.text.strip() if type_element else None\n",
+    "\n",
+    "    # Find all <p> tags within the article\n",
+    "    p_elements = article.find_all('p')\n",
+    "\n",
+    "    # Search for bathroom and bedroom information within <p> tags\n",
+    "    for p in p_elements:\n",
+    "        text = p.get_text()\n",
+    "\n",
+    "        # Search for bathroom information\n",
+    "        if re.search(r'\\b(?:bathroom)\\b', text):\n",
+    "            bathroom_info = re.findall(r'\\d+', text)\n",
+    "            if bathroom_info:\n",
+    "                data['bathroom'] = int(bathroom_info[0])  # Convert to integer if not empty\n",
+    "\n",
+    "        # Search for bedroom information\n",
+    "        if re.search(r'\\b(?:bedroom)\\b', text):\n",
+    "            bedroom_info = re.findall(r'\\d+', text)\n",
+    "            if bedroom_info:\n",
+    "                data['bedroom'] = int(bedroom_info[0])  # Convert to integer if not empty\n",
+    "\n",
+    "    # Append the data for this article to the data list\n",
+    "    data_list.append(data)\n",
+    "\n",
+    "# Print the list of data for all items\n",
+    "for i, data in enumerate(data_list, 1):\n",
+    "    print(f\"Item {i}: {data}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "760cabdf-16dd-43a7-bb28-4838a0bbfe98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>address</th>\n",
+       "      <th>text1</th>\n",
+       "      <th>floorSize</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>date-preview</th>\n",
+       "      <th>highlight</th>\n",
+       "      <th>type</th>\n",
+       "      <th>bedroom</th>\n",
+       "      <th>bathroom</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1277 Redbank Cres , Oakville - College Park</td>\n",
+       "      <td>College Park</td>\n",
+       "      <td>1299</td>\n",
+       "      <td>-79.70085</td>\n",
+       "      <td>43.46068</td>\n",
+       "      <td>3 hours ago</td>\n",
+       "      <td>$848,000</td>\n",
+       "      <td>Condo Townhouse</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2158 Lillykin St , Oakville - River Oaks</td>\n",
+       "      <td>River Oaks</td>\n",
+       "      <td>4250</td>\n",
+       "      <td>-79.70930</td>\n",
+       "      <td>43.47843</td>\n",
+       "      <td>3 hours ago</td>\n",
+       "      <td>$2,769,900</td>\n",
+       "      <td>Detached</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>429 - 2485 Taunton Rd , Oakville - Uptown Core</td>\n",
+       "      <td>Uptown Core</td>\n",
+       "      <td>649</td>\n",
+       "      <td>-79.71938</td>\n",
+       "      <td>43.48630</td>\n",
+       "      <td>6 hours ago</td>\n",
+       "      <td>$635,000</td>\n",
+       "      <td>Condo Apt</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2501 - 297 Oak Walk Dr , Oakville - Uptown Core</td>\n",
+       "      <td>Uptown Core</td>\n",
+       "      <td>549</td>\n",
+       "      <td>-79.71817</td>\n",
+       "      <td>43.48617</td>\n",
+       "      <td>6 hours ago</td>\n",
+       "      <td>$575,000</td>\n",
+       "      <td>Condo Apt</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>118 Tavistock Sq , Oakville - Old Oakville</td>\n",
+       "      <td>Old Oakville</td>\n",
+       "      <td>2250</td>\n",
+       "      <td>-79.68256</td>\n",
+       "      <td>43.43334</td>\n",
+       "      <td>6 hours ago</td>\n",
+       "      <td>$2,299,000</td>\n",
+       "      <td>Detached</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>417 - 185 Robinson St , Oakville - Old Oakville</td>\n",
+       "      <td>Old Oakville</td>\n",
+       "      <td>1099</td>\n",
+       "      <td>-79.66801</td>\n",
+       "      <td>43.44496</td>\n",
+       "      <td>7 hours ago</td>\n",
+       "      <td>$773,000</td>\n",
+       "      <td>Condo Apt</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2193 Constance Dr , Oakville - Eastlake</td>\n",
+       "      <td>Eastlake</td>\n",
+       "      <td>1750</td>\n",
+       "      <td>-79.64955</td>\n",
+       "      <td>43.48113</td>\n",
+       "      <td>7 hours ago</td>\n",
+       "      <td>$1,850,000</td>\n",
+       "      <td>Detached</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>417 - 185 Robinson St , Oakville - Old Oakville</td>\n",
+       "      <td>Old Oakville</td>\n",
+       "      <td>1099</td>\n",
+       "      <td>-79.66801</td>\n",
+       "      <td>43.44496</td>\n",
+       "      <td>16 hours ago</td>\n",
+       "      <td>$799,500</td>\n",
+       "      <td>Condo Apt</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>3118 Victoria St , Oakville - Bronte West</td>\n",
+       "      <td>Bronte West</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>-79.71738</td>\n",
+       "      <td>43.38860</td>\n",
+       "      <td>16 hours ago</td>\n",
+       "      <td>$3,299,900</td>\n",
+       "      <td>Detached</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1408 Bayberry Pl , Oakville - West Oak Trails</td>\n",
+       "      <td>West Oak Trails</td>\n",
+       "      <td>2531</td>\n",
+       "      <td>-79.74111</td>\n",
+       "      <td>43.44172</td>\n",
+       "      <td>16 hours ago</td>\n",
+       "      <td>$2,079,000</td>\n",
+       "      <td>Detached</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           address            text1  \\\n",
+       "0      1277 Redbank Cres , Oakville - College Park     College Park   \n",
+       "1         2158 Lillykin St , Oakville - River Oaks       River Oaks   \n",
+       "2   429 - 2485 Taunton Rd , Oakville - Uptown Core      Uptown Core   \n",
+       "3  2501 - 297 Oak Walk Dr , Oakville - Uptown Core      Uptown Core   \n",
+       "4       118 Tavistock Sq , Oakville - Old Oakville     Old Oakville   \n",
+       "5  417 - 185 Robinson St , Oakville - Old Oakville     Old Oakville   \n",
+       "6          2193 Constance Dr , Oakville - Eastlake         Eastlake   \n",
+       "7  417 - 185 Robinson St , Oakville - Old Oakville     Old Oakville   \n",
+       "8        3118 Victoria St , Oakville - Bronte West      Bronte West   \n",
+       "9    1408 Bayberry Pl , Oakville - West Oak Trails  West Oak Trails   \n",
+       "\n",
+       "   floorSize  latitude  longitude  date-preview   highlight             type  \\\n",
+       "0       1299 -79.70085   43.46068   3 hours ago    $848,000  Condo Townhouse   \n",
+       "1       4250 -79.70930   43.47843   3 hours ago  $2,769,900         Detached   \n",
+       "2        649 -79.71938   43.48630   6 hours ago    $635,000        Condo Apt   \n",
+       "3        549 -79.71817   43.48617   6 hours ago    $575,000        Condo Apt   \n",
+       "4       2250 -79.68256   43.43334   6 hours ago  $2,299,000         Detached   \n",
+       "5       1099 -79.66801   43.44496   7 hours ago    $773,000        Condo Apt   \n",
+       "6       1750 -79.64955   43.48113   7 hours ago  $1,850,000         Detached   \n",
+       "7       1099 -79.66801   43.44496  16 hours ago    $799,500        Condo Apt   \n",
+       "8       5000 -79.71738   43.38860  16 hours ago  $3,299,900         Detached   \n",
+       "9       2531 -79.74111   43.44172  16 hours ago  $2,079,000         Detached   \n",
+       "\n",
+       "   bedroom  bathroom  \n",
+       "0        3         2  \n",
+       "1        5         6  \n",
+       "2        2         2  \n",
+       "3        1         1  \n",
+       "4        3         2  \n",
+       "5        2         2  \n",
+       "6        4         3  \n",
+       "7        2         2  \n",
+       "8        6         6  \n",
+       "9        4         4  "
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "df = pd.DataFrame(data_list)\n",
+    "\n",
+    "# Display the dataframe\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "029a3e69-d49a-44d3-bf8e-b8ef0d7bb12d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
