--- a/housesaledata.ipynb
+++ b/housesaledata.ipynb
@@ -9,25 +9,20 @@
    "source": [
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup as soup\n",
-    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "from selenium.webdriver.common.by import By\n",
     "from sqlalchemy import create_engine, MetaData, Table, Column, String, Float, Integer, Date, ForeignKey\n",
     "from sqlalchemy.ext.declarative import declarative_base\n",
-    "from sqlalchemy.ext.automap import automap_base\n",
     "from sqlalchemy.orm import Session, relationship\n",
     "from sqlalchemy import create_engine\n",
     "from datetime import datetime, timedelta\n",
     "import json\n",
     "import re\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
     "from functools import reduce\n",
     "import requests\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
     "from sqlalchemy import func\n",
     "from api_keys import email, passw"
    ]
@@ -557,7 +552,7 @@
    "outputs": [],
    "source": [
     "engine = create_engine('sqlite:///housing_sales_db.db')\n",
-    "Base.metadata.drop_all(engine)\n",
+    "#Base.metadata.drop_all(engine)\n",
     "Base.metadata.create_all(engine)\n",
     "\n",
     "\n",
